# odd

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
cli/: Cargo.toml  README.md
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: calc.rs  card.rs  deck.rs  display.rs  floyd.rs  game.rs  hand.rs  lib.rs  parse.rs
src/: calc.rs  card.rs  deck.rs  floyd.rs  hand.rs  main.rs
web/: Cargo.toml  README.md
web/src/: main.rs
