[package]
name = "odd"
version = "0.0.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.5.0"
git-version = "0.3.5"
itertools = "0.10.1"
rayon = "1.5.1"
structopt = "0.3.25"
