[package]
name = "odd-web"
version = "0.0.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.145", features = ["derive"] }
odd-engine = { path = "../engine" }
serde_with = "2.0.1"
fastrand = "1.8.0"
mimalloc = "0.1.30"
